--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -47,12 +47,15 @@ import '@fontsource-variable/inter';
     --aw-font-heading: 'Inter Variable';
 
     --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
+    --aw-color-primary: rgb(0 65 200);
+    --aw-color-secondary: rgb(0, 0, 0);
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(247, 248, 248);
     --aw-color-text-default: rgb(229 236 246);
+    /* --aw-color-text-muted: rgb(229 236 246); */
     --aw-color-text-muted: rgb(229 236 246 / 66%);
+    /* --aw-color-text-muted: rgba(17, 20, 24, 0.66); */
     --aw-color-bg-page: rgb(3 6 32);
 
     ::selection {
